package de.dhbw.model.personnel;

public interface Driver {

    String getName();
    void setName(String name);
}
