package de.dhbw.model.train;

public class LongDistanceTrain extends BaseTrain {

    @Override
    public String toString() {
        return String.format("LongDistanceTrain{%s} ", super.toString());
    }
}
